2005-11-26 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(shape_node::do_render_child): Set the modified flag for the
	geometry node if the appearance has been modified.

2005-11-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(proto_node::modified): Implemented "modified" virtual function.
	Delegates to the first implementation node.

2005-11-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(appearance_node::do_render_appearance): Removed call to
	this->node::modified(false).  This is taken care of in
	openvrml::appearance_node::render_appearance.

2005-11-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Doc-comment improvements.

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	Project file updates.

	* ide-projects/Windows/VisualC7_1/OpenVRML/OpenVRML.sln: Added
	README, ChangeLog, etc. to solution.
	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj:
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/openvrml-gl/openvrml-gl.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/sdl-viewer/sdl-viewer.vcproj
	* ide-projects/Windows/VisualC7_1/OpenVRML/test-openvrml/test-openvrml.vcproj:
	Added file.


2005-11-14 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node_impl_util.h
	(openvrml::node_impl_util::event_listener_base::event_listener_equal_to::operator()):
	static_cast the lhs of the comparison to
	openvrml::event_listener*.  Microsoft cl 13.10.3077 appears to
	have a bug with virtual inheritance and requires this static_cast
	to generate the correct code.  Without the static_cast, the
	comparison will never be true.

2005-11-14 Braden McDaniel  <braden@endoframe.com>

	Project file updates.

	* ide-projects/Windows/VisualC7_1/OpenVRML/antlr/antlr.vcproj